--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ strum = "0.25"
 strum_macros = "0.25"
 bytemuck = "1.21.0"
 regex = "1.11.1"
+reqwest = { version = "0.12.12", features = ["blocking"] }
+image = "0.25.5"
