--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ bytemuck = "1.21.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.12", features = ["blocking"] }
 image = "0.25.5"
+rand = "0.9.0"
