--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ reqwest = { version = "0.12.12", features = ["blocking"] }
 image = "0.25.5"
 rand = "0.9.0"
 url = "2.5.4"
+futures-channel = "0.3.31"
+tokio = "1.43.0"
