--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ rand = "0.9.0"
 url = "2.5.4"
 futures-channel = "0.3.31"
 tokio = "1.43.0"
+egui-winit = "0.31.0"
+egui-wgpu = "0.31.0"
+egui = "0.31.0"
