--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,9 @@ edition = "2021"
 [dependencies]
 env_logger = "0.11.6"
 pollster = "0.4.0"
-slang = { path = "../slang-rs" }
-wgpu = "24.0.1"
-winit = "0.30.8"
-strum = "0.25"
-strum_macros = "0.25"
+wgpu = { version = "24.0.1", features = ["serde"] }
+winit = "0.30.9"
 bytemuck = "1.21.0"
-regex = "1.11.1"
 reqwest = { version = "0.12.12", features = ["blocking"] }
 image = "0.25.5"
 rand = "0.9.0"
@@ -22,3 +18,15 @@ tokio = "1.43.0"
 egui-winit = "0.31.0"
 egui-wgpu = "0.31.0"
 egui = "0.31.0"
+regex = "1.11.1"
+serde = { version = "1.0.217", features = ["derive"] }
+ron = "0.8.1"
+
+[build-dependencies]
+slang = { path = "../slang-rs" }
+strum = "0.27"
+strum_macros = "0.27"
+regex = "1.11.1"
+wgpu = { version = "24.0.1", features = ["serde"] }
+serde = { version = "1.0.217", features = ["derive"] }
+ron = "0.8.1"
