--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,6 @@ wgpu = { version = "24.0.0", features = ["serde"] }
 winit = "0.30.9"
 bytemuck = "1.21.0"
 rand = "0.9.0"
-egui-wgpu = "0.31.0"
-egui = "0.31.0"
 regex = "1.11.1"
 serde = { version = "1.0.217", features = ["derive"] }
 ron = "0.8.1"
@@ -47,3 +45,7 @@ console_error_panic_hook = "0.1.7"
 wasm-bindgen = "0.2.100"
 web-sys = "0.3.77"
 wasm-bindgen-futures = "0.4.50"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+egui-wgpu = "0.31.0"
+egui = "0.31.0"
