--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ getrandom = { version = "0.3", features = ["wasm_js"] }
 console_error_panic_hook = "0.1.7"
 wasm-bindgen = "0.2.100"
 web-sys = "0.3.77"
+js-sys = "0.3.77"
 wasm-bindgen-futures = "0.4.50"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
