--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ bytemuck = "1.21.0"
 reqwest = { version = "0.12.12", features = ["blocking"] }
 image = "0.25.5"
 url = "2.5.4"
+regex = "1.11.1"
 
 [patch.crates-io]
 wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "d6ca412" }
