--- a/slang-compiler-type-definitions/Cargo.toml
+++ b/slang-compiler-type-definitions/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2024"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 wgpu = { version = "24.0.0", features = ["serde"] }
+typetag = "0.2"
+bytemuck = "1.21.0"
+winit = "0.30.9"
+web-time = "1.1.0"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+egui = "0.31.0"
