--- a/slang-playground-compiler/Cargo.toml
+++ b/slang-playground-compiler/Cargo.toml
@@ -10,7 +10,7 @@ typetag = "0.2"
 bytemuck = "1.21.0"
 winit = "0.30.9"
 web-time = "1.1.0"
-slang-reflector = { git="https://github.com/Devon7925/slang-reflector.git" }
+slang-reflector = { git = "https://github.com/Devon7925/slang-reflector.git", optional = true }
 url = "2.4"
 strum = "0.27.1"
 strum_macros = "0.27.1"
@@ -21,3 +21,6 @@ tobj = "4.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 egui = "0.31.0"
+
+[features]
+compilation = ["dep:slang-reflector"]
