--- a/slang-playground-compiler/Cargo.toml
+++ b/slang-playground-compiler/Cargo.toml
@@ -18,6 +18,7 @@ regex = "1.9"
 reqwest = { version = "0.12.15", features = ["blocking"] }
 image = "0.25.6"
 tobj = "4.0"
+rand = "0.9.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 egui = "0.31.0"
