--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
-[package]
-name = "slang-native-playground"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+members = [
+    "examples",
+    "slang-debug-app",
+    "slang-playground-compiler",
+    "slang-renderer",
+    "slang-shader-macros",
+]
+resolver = "3"
 
-[dependencies]
+[workspace.dependencies]
 env_logger = "0.11.6"
 pollster = "0.4.0"
 wgpu = { version = "25.0.0", features = ["serde"] }
@@ -15,25 +20,29 @@ ron = "0.10.1"
 flume = "0.11.1"
 web-time = "1.1.0"
 futures = "0.3.31"
-slang-playground-compiler = { path = "slang-playground-compiler" }
-slang-shader-macros = { path = "slang-shader-macros" }
-slang-renderer = { path = "slang-renderer" }
-
-[dependencies.egui-winit]
-version = "0.32.0"
-# Required for compiling to WASM
-default-features = false
-features = ["links", "wayland", "x11"]
-
-[target.wasm32-unknown-unknown.dependencies]
-getrandom = { version = "0.3", features = ["wasm_js"] }
+egui-winit = { version = "0.32.0", default-features = false, features = ["links", "wayland", "x11"] }
+getrandom = { version = "0.2.16", features = ["js"] }
 console_error_panic_hook = "0.1.7"
 wasm-bindgen = "0.2.100"
 web-sys = "0.3.77"
 js-sys = "0.3.77"
 wasm-bindgen-futures = "0.4.50"
-
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 egui-wgpu = "0.32.0"
 egui = "0.32.0"
+typetag = "0.2.20"
+slang-reflector = { path = "../slang-reflector" }
+url = "2.5.2"
+strum = { version = "0.26.3", features = ["derive"] }
+reqwest = { version = "0.12.15", features = ["blocking"] }
+image = "0.25.6"
+tobj = "4.0.3"
+rand = "0.9.1"
+syn = { version = "2.0.101", features = ["full", "extra-traits"] }
+quote = "1.0.40"
+proc-macro2 = "1.0.95"
+base64 = "0.22.1"
+serde_json = "1.0.140"
 slang-debug-app = { path = "slang-debug-app" }
+slang-playground-compiler = { path = "slang-playground-compiler" }
+slang-renderer = { path = "slang-renderer" }
+slang-shader-macros = { path = "slang-shader-macros" }
