--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,16 +1,26 @@
 [package]
-name = "slang-renderer"
+name = "examples"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+env_logger = { workspace = true }
+pollster = { workspace = true }
 wgpu = { workspace = true }
 winit = { workspace = true }
 bytemuck = { workspace = true }
 regex = { workspace = true }
-futures = { workspace = true }
+serde = { workspace = true }
+ron = { workspace = true }
+flume = { workspace = true }
 web-time = { workspace = true }
+futures = { workspace = true }
 slang-playground-compiler = { workspace = true }
+slang-shader-macros = { workspace = true }
+slang-renderer = { workspace = true }
+
+[dependencies.egui-winit]
+workspace = true
 
 [target.wasm32-unknown-unknown.dependencies]
 getrandom = { workspace = true }
@@ -19,3 +29,8 @@ wasm-bindgen = { workspace = true }
 web-sys = { workspace = true }
 js-sys = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+egui-wgpu = { workspace = true }
+egui = { workspace = true }
+slang-debug-app = { workspace = true }
