--- a/slang-playground-compiler/Cargo.toml
+++ b/slang-playground-compiler/Cargo.toml
@@ -4,24 +4,23 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-wgpu = { version = "25.0.0", features = ["serde"] }
-typetag = "0.2"
-bytemuck = "1.23.0"
-winit = "0.30.9"
-web-time = "1.1.0"
-slang-reflector = { git = "https://github.com/Devon7925/slang-reflector.git", optional = true }
-url = "2.4"
-strum = "0.27.1"
-strum_macros = "0.27.1"
-regex = "1.9"
-reqwest = { version = "0.12.15", features = ["blocking"] }
-image = "0.25.6"
-tobj = "4.0"
-rand = "0.9.1"
+serde = { workspace = true }
+wgpu = { workspace = true }
+typetag = { workspace = true }
+bytemuck = { workspace = true }
+winit = { workspace = true }
+web-time = { workspace = true }
+slang-reflector = { workspace = true, optional = true }
+url = { workspace = true }
+strum = { workspace = true }
+regex = { workspace = true }
+reqwest = { workspace = true }
+image = { workspace = true }
+tobj = { workspace = true }
+rand = { workspace = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-egui = "0.32.0"
+egui = { workspace = true }
 
 [features]
 compilation = ["dep:slang-reflector"]
