--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ quote = "1.0.40"
 proc-macro2 = "1.0.95"
 base64 = "0.22.1"
 serde_json = "1.0.140"
+dyn-clone = "1.0.20"
 slang-debug-app = { path = "slang-debug-app" }
 slang-playground-compiler = { path = "slang-playground-compiler" }
 slang-renderer = { path = "slang-renderer" }
