--- a/slang-playground-compiler/Cargo.toml
+++ b/slang-playground-compiler/Cargo.toml
@@ -18,6 +18,7 @@ reqwest = { workspace = true }
 image = { workspace = true }
 tobj = { workspace = true }
 rand = { workspace = true }
+dyn-clone = { workspace = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 egui = { workspace = true }
