--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ proc-macro2 = "1.0.95"
 base64 = "0.22.1"
 serde_json = "1.0.140"
 dyn-clone = "1.0.20"
+once_cell = "1.21.3"
 slang-debug-app = { path = "slang-debug-app" }
 slang-playground-compiler = { path = "slang-playground-compiler" }
 slang-renderer = { path = "slang-renderer" }
