--- a/slang-playground-compiler/Cargo.toml
+++ b/slang-playground-compiler/Cargo.toml
@@ -10,7 +10,7 @@ typetag = { workspace = true }
 bytemuck = { workspace = true }
 winit = { workspace = true }
 web-time = { workspace = true }
-slang-reflector = { workspace = true, optional = true }
+slang-reflector = { workspace = true, optional = true, features = ["derive-serde"]}
 url = { workspace = true }
 strum = { workspace = true }
 regex = { workspace = true }
